Fix promo section text invisible in Light Mode (#519)

--- a/style.css
+++ b/style.css
@@ -1265,7 +1265,8 @@ button.white .ripple-effect {
    ============================================ */
 
 #banner {
-    background-image: url("images/banner/b2.jpg");
+    background-image: url("images/banner/b2.png");
+    background-color: #041e42;
     height: 40vh;
     width: 100%;
     background-size: cover;
